--- a/pewpew/Info.plist
+++ b/pewpew/Info.plist
@@ -8,5 +8,9 @@
 	<array>
 		<string>Worktalk.ttf</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+		<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
