--- a/pewpew/Info.plist
+++ b/pewpew/Info.plist
@@ -12,5 +12,7 @@
 		<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
